objects/IntuitArticleMaster__c.object
<CustomObject>
    <fields>
        <fullName>ArticleId__c</fullName>
        <description>Primary Key to Article Object  (ArticleNumber + Language)     000001235_en_US</description>
        <externalId>true</externalId>
        <label>ArticleId</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ArticleLastModifiedDate__c</fullName>
        <label>ArticleLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>ArticleNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permanent_Link__c</fullName>
        <defaultValue>&apos;Pending&apos;</defaultValue>
        <label>Permanent Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>PublishStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCArticleId__c</fullName>
        <label>SFDCArticleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLatestVersion__c</fullName>
        <label>isLatestVersion</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Permanent_Link__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>ArticleNumber__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ArticleLastModifiedDate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Title__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>ArticleId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>